@@ -1,8 +1,8 @@
 Package: momentuHMM
 Type: Package
 Title: Maximum Likelihood Analysis of Animal Movement Behavior Using Multivariate Hidden Markov Models
-Version: 1.0.2
-Date: 2017-07-20
+Version: 1.1.0
+Date: 2017-07-31
 Depends:
     R (>= 2.10), splines, splines2
 Author: Brett McClintock, Theo Michelot, Roland Langrock, Toby Patterson, Eric
